--- a/My-Clash-Gemini.ini
+++ b/My-Clash-Gemini.ini
@@ -1,6 +1,4 @@
-; ==========================================================
-; 1. 规则集 (RuleSets)
-; ==========================================================
+;1、域名组
 ruleset=👽 AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
 ruleset=👽 AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
 ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
@@ -17,14 +15,8 @@ ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/head
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=➡️ 国内,[]FINAL
 
-; ==========================================================
-; 2. 策略组 (Strategy Groups) - 用户手动交互区
-; ==========================================================
-; [新增] Gemini 专用组 (筛选特定节点)
-; 注意：请将括号内的 (美国 01|新加坡 05|日本 02) 改为你实际的节点关键词
-custom_proxy_group=🤖 Gemini`url-test`.*`http://www.gstatic.com/generate_204`300,,50`(?i)(新加坡 01|新加坡 02|新加坡 03|新加坡 04|新加坡 05|新加坡 06|新加坡 07|新加坡 08|新加坡 09|新加坡 10)
-
-custom_proxy_group=👽 AI1`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+;2、策略组（域名组-节点组）
+custom_proxy_group=👽 AI1`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]Gemini-手动`[]Geimini-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👽 AI2`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
@@ -33,9 +25,10 @@ custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有-自动`[]港台日新
 custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 
-; ==========================================================
-; 3. 节点组 (Node Groups) - 自动筛选区域
-; ==========================================================
+;3、节点组
+custom_proxy_group=Gemini-手动`select`.*`http://www.gstatic.com/generate_204`300,,50`(?i)(新加坡01|新加坡02|新加坡03|新加坡04|新加坡05|新加坡06|新加坡07|新加坡08|新加坡09|新加坡10)
+custom_proxy_group=Geimini-自动`url-test`(新加坡01|新加坡02|新加坡03|新加坡04|新加坡05|新加坡06|新加坡07|新加坡08|新加坡09|新加坡10)`http://www.gstatic.com/generate_204`180,5,100
+
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=港台日新韩-自动`url-test`(广港|广台|广日|广新|广韩|广美|香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=台日新韩-自动`url-test`(广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`180,5,100
@@ -47,17 +40,6 @@ custom_proxy_group=韩国-自动`url-test`(广韩|韩国|韓國|KR|首尔|春川
 custom_proxy_group=美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|硅谷|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=其他-自动`url-test`(波|柬|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|孟|芬|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`180,5,100
 
-; ==========================================================
-; 4. 自定义规则 (Custom Rules)
-; ==========================================================
-; [新增] 强制 Gemini 流量走 Gemini 专用组
-custom_rule_domain_keyword=gemini`🤖 Gemini
-custom_rule_domain_suffix=gemini.google.com`🤖 Gemini
-custom_rule_domain_suffix=bard.google.com`🤖 Gemini
-custom_rule_domain_suffix=proactivebackend-pa.googleapis.com`🤖 Gemini
-
-; ==========================================================
-; 5. 设置 (Settings)
-; ==========================================================
+;4、启用规则集
 enable_rule_generator=true
 overwrite_original_rules=true
